fix: move z-indexes to variables

--- a/src/elements/customSelect/customSelect.scss
+++ b/src/elements/customSelect/customSelect.scss
@@ -102,7 +102,7 @@
   border-radius: 0.4rem;
   background-color: rgb(31, 31, 31);
   box-shadow: 0 0 2px #e9e1f8;
-  z-index: 1;
+  z-index: $customSelectZIndex;
   padding: 0.8rem 0;
   display: none;
 
